[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Stellar transactions pallet"
edition = "2018"
homepage = "https://pendulumchain.org/"
license = "Unlicense"
name = "pallet-stellar-transactions"
publish = false
repository = "https://github.com/pendulum-chain/spacewalk"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
base64 = {version = '0.13.0', default-features = false, features = ['alloc']}
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
hex = {version = "0.4", default-features = false}
log = {version = "0.4.14", default-features = false}
scale-info = {version = "1.0.0", default-features = false, features = ["derive"]}
serde = {version = '1.0.100', default-features = false, features = ['derive']}
serde_json = {version = '1.0.45', default-features = false, features = ['alloc']}

# Substrate packages
frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", optional = true}
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17"}
sp-arithmetic = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17"}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17"}
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17"}
sp-keystore = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17", optional = true}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17"}

orml-currencies = {default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "v0.9.16-update"}
orml-tokens = {default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "v0.9.16-update"}
orml-traits = {default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "v0.9.16-update"}
orml-utilities = {default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "v0.9.16-update"}
pallet-transaction-payment = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16"}
substrate-stellar-sdk = {git = "https://github.com/pendulum-chain/substrate-stellar-sdk", branch = "polkadot-v0.9.16", default-features = false, features = ['offchain']}

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "substrate-stellar-sdk/std",
  "pallet-transaction-payment/std",
  "log/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-keystore",
  'orml-currencies/std',
  'orml-tokens/std',
  'orml-traits/std',
  'orml-utilities/std',
  'base64/std',
  'substrate-stellar-sdk/std',
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
